@@ -1,5 +1,5 @@
 (*
- * ExtPrint - Functionnal unparsing
+ * Print - Functionnal unparsing
  * Copyright (C) 2009 Jeremie Dimino
  *
  * This library is free software; you can redistribute it and/or
